# kivy-srctest

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  buildozer.spec  main.py  pyproject.toml  pytest.ini
android/: buildozer.spec  main.py
src/srctest/: __init__.py  app.py  console.py
