[tool.poetry]
name = "srctest"
version = "0.1.0"
description = "Test Kivy with src project structure"
authors = ["Eero af Heurlin <eero.afheurlin@advian.fi>"]

[tool.poetry.scripts]
kivysrctest = "srctest.console:srctest_cli"
kivysrctestasync = "srctest.console:srctest_async_cli"


[tool.black]
line-length = 120
target-version = ['py37']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  |  __pycache__
)
'''

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable=["fixme", "W1202", "C0330"]

[tool.coverage.run]
omit = ["tests/*"]
branch = true

[tool.poetry.dependencies]
python = "^3.7"
kivy = "^1.11.1"
pysdl2 = "^0.9.7"
pillow = "^7.2.0"
# For some reason poetry can't resolve version from here
#kivy = {git = "https://github.com/kivy/kivy.git", branch = "master"}

[tool.poetry.dev-dependencies]
pytest = "^3.0"
coverage = {version = "^4.5", extras = ["toml"]}
pytest-cov = "^2.8"
pylint = "^2.4"
black = "=19.10.b0"
bandit = "^1.6"
mypy = "^0.750.0"
pre-commit = "^1.20"
bump2version = "^0.5.11"
pytest-asyncio = "^0.10.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
